tests/rosetta/out/Fortran/csv-to-html-translation-3.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:41Z
program csv_to_html_translation_3
  implicit none
  print *, '<table>'
  print *, '   <thead>'
  print *, '      <tr><th>Character</th><th>Speech</th></tr>'
  print *, '   </thead>'
  print *, '   <tbody>'
  print *, '      <tr><td>The multitude</td><td>The messiah! Show us the messiah!</td></tr>'
  print *, '      <tr><td>Brians mother</td><td>&lt;angry&gt;Now you listen here! He&#39;s not the messiah; he&#39;s a very naughty boy! Now go away!&lt;/angry&gt;</td></tr>'
  print *, '      <tr><td>The multitude</td><td>Who are you?</td></tr>'
  print *, '      <tr><td>Brians mother</td><td>I&#39;m his mother; that&#39;s who!</td></tr>'
  print *, '      <tr><td>The multitude</td><td>Behold his mother! Behold his mother!</td></tr>'
  print *, '   </tbody>'
  print *, '</table>'
end program csv_to_html_translation_3
